<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/background"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".LoginActivity">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userILay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_textstyle"
                    android:textColor="#66000000"
                    android:textColorHint="#66000000"
                    android:paddingLeft="10dp"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_loginname"
                        android:textColor="#66000000"
                        android:textColorLink="#FFFF0000" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/RealILay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@drawable/login_textstyle"
                    android:layout_marginTop="20dp"
                    android:textColor="#66000000"
                    android:textColorHint="#66000000"
                    android:paddingLeft="10dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/realname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_realname"
                        android:textColor="#66000000"
                        android:textColorLink="#FFFF0000" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_textstyle"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"

                    >

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"

                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#66000000"
                        android:textColorHint="#66000000"
                        android:textColorLink="#FFFF0000" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_textstyle"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    >

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#66000000"
                        android:textColorHint="#66000000"
                        android:textColorLink="#FFFF0000" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/action_sign_in"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/regbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/action_reg_in"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/exitbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_button"

                    android:text="@string/action_quit"
                    android:textColor="#fff" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>