<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mittanul"
            android:textAlignment="center"
            android:textColor="@color/fooldal_button_border_color"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_nyelvtan"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/nyelvtan"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Nyelvtan"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_biologia"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Biológia"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_informatika"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Info"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_border_width="3dp"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_matek"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Matek"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_border_width="3dp"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_fizika"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Fizika"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_kemia"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Kémia"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_tori"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Töri"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_irodalom"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Irodalom"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/matek"
                            app:civ_border_color="@color/fooldal_button_border_color"
                            app:civ_shadow="true"
                            app:civ_shadow_radius="10"
                            app:civ_shadow_color="#aa000000"/>
                        <ImageButton
                            android:id="@+id/btn_rajz"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:adjustViewBounds="true"
                            android:background="#00ffffff"
                            android:contentDescription="@string/biologia"
                            />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Rajz"
                        android:textColor="@color/fooldal_button_border_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>